# Conspire.jl

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  Project.toml  README.md
.github/workflows/: Docs.yml  Pages.yml  Test.yml
docs/: Project.toml  index.html  make.jl
docs/src/: constitutive.md  index.md  math.md
docs/src/constitutive/: solid.md
docs/src/constitutive/solid/: elastic.md  hyperelastic.md
docs/src/constitutive/solid/elastic/: almansi_hamel.md  hencky_elastic.md  saint_venant_kirchhoff_elastic.md
docs/src/constitutive/solid/hyperelastic/: arruda_boyce.md  fung.md  gent.md  hencky.md  mooney_rivlin.md  neo_hookean.md  saint_venant_kirchhoff.md  yeoh.md
docs/src/math/: special.md
src/: Conspire.jl  math.jl
src/constitutive/solid/: elastic.jl  hyperelastic.jl
src/constitutive/solid/elastic/: almansi_hamel.jl  hencky_elastic.jl  saint_venant_kirchhoff_elastic.jl
src/constitutive/solid/hyperelastic/: arruda_boyce.jl  fung.jl  gent.jl  hencky.jl  mooney_rivlin.jl  neo_hookean.jl  saint_venant_kirchhoff.jl  saint_venant_kirchoff.jl  yeoh.jl
src/math/: special.jl
test/: runtests.jl
test/constitutive/: elastic.jl  hyperelastic.jl
