[package]
authors = ["Michael R. Buche <mrbuche@sandia.gov>"]
build = "deps/conspire_jl/build.rs"
categories = ["mathematics", "science"]
description = "c o n s p i r e"
edition = "2024"
keywords = ["conspire", "mrbuche"]
license = "GPL-3.0"
name = "conspire_jl"
version = "0.1.0"

[build-dependencies]
conspire = { features = ["doc", "fem"], git = "https://github.com/mrbuche/conspire.rs.git", branch = "dev" }

[dependencies]
conspire = { features = ["doc", "fem"], git = "https://github.com/mrbuche/conspire.rs.git", branch = "dev" }

[lib]
crate-type = ["cdylib"]
path = "deps/conspire_jl/src/lib.rs"

[profile.release]
codegen-units = 1
lto = true
panic = "abort"
strip = "symbols"
